Repair jquery versions conflict

--- a/users/templates/users/base.html
+++ b/users/templates/users/base.html
@@ -7,10 +7,8 @@
     <!--loads the path to static files - only if needed -->
     {% load staticfiles %}
     <!--bootstrap, fonts from google -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -18,11 +16,10 @@
     <link href='https://fonts.googleapis.com/css?family=Satisfy' rel='stylesheet' type='text/css'>
     <link href="{% static 'users/style.css' %}" rel="stylesheet">
 
-    <script>var $j = jQuery.noConflict(true);</script>
     <script>
 
-  $j(function() {
-    $j("#recipes").autocomplete({
+  $(function() {
+    $("#recipes").autocomplete({
       source: "/search/get_recipes/",
       select: function (event, ui) { //item selected
         AutoCompleteSelectHandler(event, ui)
@@ -34,10 +31,10 @@
   function AutoCompleteSelectHandler(event, ui)
   {
    if(ui.item){
-            $j(event.target).val(ui.item.value);
+            $(event.target).val(ui.item.value);
         }
         //submit the form
-        $j(event.target.form).submit();
+        $(event.target.form).submit();
   }
 
     </script>
