--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -3,9 +3,9 @@
 
 {% block body %}
 <script type="text/javascript">
+
     var i=0;
     content = '<tr>\n' +
-            '<div class="form-group">' +
             '<td><label class="control-label col-sm-3">Ingredient_1 </label></td>' +
             '<td><input type="text" name="i0" id="i0"/></td>' +
             '<td><input type="text" name="quantity0" id="quantity0"/></td>' +
@@ -14,7 +14,6 @@
                 '<option value={{ unit }}>{{ unit }}</option>' +
             '{% endfor %}' +
             '</select></td>' +
-            '</div>' +
             '</tr>';
     window.onload = setTableOfIngredients;
 
@@ -22,22 +21,18 @@
     $("#i"+i).autocomplete({
       source: "/recipes/new_recipe/get_ingredients/",
       select: function (event, ui) { //item selected
-        AutoCompleteSelectHandler(event, ui)
+        AutoCompleteSelectHandler1(event, ui)
       },
       minLength: 1,
     });
   });
 
-  function AutoCompleteSelectHandler(event, ui)
+  function AutoCompleteSelectHandler1(event, ui)
   {
    if(ui.item){
             $(event.target).val(ui.item.value);
         }
   }
-
-
-
-
 
 
     function setTableOfIngredients()
@@ -81,21 +76,21 @@
 
 
         $(function() {
-        $("#i"+i).autocomplete({
-        source: "/recipes/new_recipe/get_ingredients/",
-        select: function (event, ui) { //item selected
-        AutoCompleteSelectHandler(event, ui)
-        },
-        minLength: 1,
-        });
+            $("#i"+i).autocomplete({
+                source: "/recipes/new_recipe/get_ingredients/",
+                select: function (event, ui) { //item selected
+                    AutoCompleteSelectHandler1(event, ui)
+                },
+            minLength: 1,
+            });
         });
 
-        function AutoCompleteSelectHandler(event, ui)
+        function AutoCompleteSelectHandler1(event, ui)
         {
             if(ui.item){
             $(event.target).val(ui.item.value);
+            }
         }
-  }
         setTableOfIngredients();
 
         for(j=0;j<i;j++) {
@@ -160,8 +155,8 @@
                         <div id="addition">
                             <div class="form-group">
                                 <label class="control-label col-sm-2">Ingredient_1</label>
-                                <input type="text" name="i0" id="i0" required />
-                                <input type="text" name="quantity0" id="quantity0" required />
+                                <input type="text" name="i0" id="i0"/>
+                                <input type="text" name="quantity0" id="quantity0"/>
                                 <select name="unit0" id="unit0">
                                     {% for unit in unit_class %}
                                         <option value={{ unit }}>{{ unit }}</option>
