chnging addition of photo

--- a/recipes/templates/recipes/recipe_form.html
+++ b/recipes/templates/recipes/recipe_form.html
@@ -138,8 +138,10 @@
                             <input type="radio" name="level" value="demanding"> Demanding
                         </div>
                         <div class="form-group">
-                            <label class="control-label col-sm-3">Link to photo</label>
-                            <input type="text" name="dish_photo"/>
+                            <label class="control-label col-sm-3">Photo</label>
+                            <label class="btn btn-primary">
+                            <input type="file" accept="image/*" name="dish_photo" style="display:none;" >
+                                Choose picture</label>
                         </div>
                         <div class="form-group">
                           <label class="control-label col-sm-3" for="instruction">Recipe:</label>
