Add more details about our project to Readme.md

--- a/recipes/templates/recipes/single_recipe.html
+++ b/recipes/templates/recipes/single_recipe.html
@@ -4,7 +4,7 @@
 <script type="text/javascript">
     function func(){
     var img = document.getElementById('photo');
-    img.src ='../../../../media/recipe_default.png';
+    img.src ='http://127.0.0.1:8000/media/recipe_default.png';
     img.style.width = '300px';
 };
 </script>
