Chage media path

--- a/users/templates/users/index.html
+++ b/users/templates/users/index.html
@@ -111,7 +111,7 @@
     <div class="item active">
       <div class="col-md-4">
           <a href="{% url 'recipes:single_recipe' most_popular_recipe.id %}">
-              <img src="http://127.0.0.1:8000/media/{{ most_popular_recipe.dish_photo }}" height="230" alt="{{ most_popular_recipe.title }}">
+              <img src="https://still-caverns-70364.herokuapp.com/media/{{ most_popular_recipe.dish_photo }}" height="230" alt="{{ most_popular_recipe.title }}">
               <h3><span class='spacer'>{{ most_popular_recipe.title }}</span></h3>
           </a>
       </div>
@@ -120,7 +120,7 @@
     <div class="item">
       <div class="col-md-4">
           <a href="{% url 'recipes:single_recipe' recipe.id %}">
-              <img src="http://127.0.0.1:8000/media/{{ recipe.dish_photo }}" height="230" alt="{{ recipe.title }}">
+              <img src="https://still-caverns-70364.herokuapp.com/media/{{ recipe.dish_photo }}" height="230" alt="{{ recipe.title }}">
               <h3><span class='spacer'>{{ recipe.title }}</span></h3>
           </a>
       </div>
